# Google-APAC-1

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/instructions/: latest-dependencies-and-modern-patterns.instructions.md
PPT/: fill_hackathon_ppt.py
PPT/diagrams/: architecture.mmd  mermaid-config.json  process-flow.mmd  wireframe-flow.mmd
app/: main.py  startup.py  test_execution.py  test_graph.py  test_planning.py  test_reflection.py
app/adk/: ops_agent.py  workflow_agents.py  workflow_runner.py
app/agents/: execution_agent.py  planning_agent.py  reflection_agent.py  research_agent.py
app/api/: routes.py
app/core/: llm.py  security.py  test_llm.py  vertex_runtime.py
app/core/utils/: json_parser.py
app/db/: alloydb.py  sqlite.py
app/graph/: workflow.py
app/mcp_server/: server.py
app/mcp_server/tools/: sheets_sync_tool.py  sqlite_read_tool.py  sqlite_update_tool.py  web_search_tool.py  youtube_analytics_tool.py  youtube_data_tool.py
app/services/: kpi_builder.py  sheets_client.py  sheets_helper.py  sheets_pb2.py  sheets_pb2_grpc.py  sheets_service.py  sheets_sync.py  test_analytics.py  test_parallel.py  test_sheets.py  test_trending.py  test_websearch.py  test_youtube.py  test_youtube_helper.py  websearch_helper.py  youtube_client.py  youtube_helper.py  youtube_pb2.py  youtube_pb2_grpc.py  youtube_service.py
proto/: sheets.proto  youtube.proto
ui/: app.js  auth.css  auth.js  forgot.html  index.html  login.html  register.html  styles.css
ui/components/: analytics.js  chat.js  history.js  runs.js  tasks.js
